# pysos

./: README.md  example.py  pyproject.toml
examples/: basic_query.py  export_csv.py
pysos/: observations.py  querybuilder.py  species.py
src/pysos/: observations.py  querybuilder.py
