[project]
name = "pysos"
version = "0.1.1"
description = "Python interface for Species Observation System API"
readme = "README.md"
authors = [
    { name = "Karl Gunnarsson", email = "karl.ia.gunnarsson@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.3",
    "types-requests>=2.32.0.20250306",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
